cabal-version:       >=1.10
name:                mahlzeit
version:             0.1.0
synopsis:            Recipe toolkit
homepage:            https://github.com/kmein/mahlzeit
license:             MIT
license-file:        LICENSE
author:              Kierán Meinhardt
maintainer:          kieran.meinhardt@gmail.com
category:            Text
build-type:          Simple
extra-source-files:  CHANGELOG.md

executable mahlzeit
  main-is:             Main.hs
  other-modules:       Mahlzeit.Recipe
                     , Mahlzeit.Find
                     , Mahlzeit.PrettyPrinter
                     , Mahlzeit.Import.MealMaster
  build-depends:       base
                     , ansi-terminal
                     , directory
                     , filepath
                     , megaparsec
                     , optparse-applicative
                     , prettyprinter
                     , process
                     , text
                     , yaml
  hs-source-dirs:      src
  default-language:    Haskell2010
