cabal-version:       >=1.10
name:                mahlzeit
version:             0.1.0
synopsis:            Recipe toolkit
homepage:            https://github.com/kmein/mahlzeit
license:             MIT
license-file:        LICENSE
author:              Kierán Meinhardt
maintainer:          kieran.meinhardt@gmail.com
category:            Text
build-type:          Simple
extra-source-files:  CHANGELOG.md

library
  hs-source-dirs:      src
  exposed-modules:     Mahlzeit.Recipe
                     , Mahlzeit.Find
                     , Mahlzeit.PrettyPrinter
                     , Mahlzeit.Import.MealMaster
  build-depends:       base
                     , ansi-terminal
                     , directory
                     , filepath
                     , megaparsec
                     , prettyprinter
                     , text
                     , yaml
  default-language:    Haskell2010

executable mahlzeit
  hs-source-dirs:      app
  main-is:             Main.hs
  build-depends:       mahlzeit
                     , ansi-terminal
                     , base
                     , directory
                     , filepath
                     , optparse-applicative
                     , process
                     , text
                     , yaml
  default-language:    Haskell2010

test-suite test-mahlzeit
  type:                exitcode-stdio-1.0
  main-is:             Spec.hs
  hs-source-dirs:      test
  build-depends:       mahlzeit
                     , base
                     , doctest
                     , megaparsec
                     , raw-strings-qq
                     , tasty
                     , tasty-hunit
  default-language:    Haskell2010
